# sentinel

./: Cargo.toml  PLAN.md  README.md  test-page.html
.github/workflows/: ci.yml  release.yml
src/: budget.rs  compare.rs  daemon.rs  lib.rs  main.rs  recording.rs
src/actor/: dom_tree.rs  mod.rs  network.rs  reconcile.rs  stability.rs  timeline.rs
src/actuator/: input.rs  mod.rs  navigation.rs  report.rs
src/cdp/: browser.rs  client.rs  mod.rs  types.rs
src/diff/: dom_diff.rs  mod.rs  visual_diff.rs
src/query/: commands.rs
src/sensor/: console.rs  dom.rs  mod.rs  network.rs  page.rs
tests/: integration.sh
