[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
description = "Continuous-observation agent browser framework"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-util = "0.7"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data structures
slotmap = "1"
bytes = "1"

# Image processing
image = "0.25"

# Text diff
similar = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Base64 for screenshot decoding
base64 = "0.22"

# URL parsing
url = "2"

# HTTP client (for Chrome /json/version endpoint)
reqwest = { version = "0.12", features = ["json"] }
